# flequit

./: .aiignore  .editorconfig  .gitignore  .prettierignore  .prettierrc.ts  AGENT.md  AGENTS.md  CLAUDE.md  CLAUDE_ja.md  GEMINI.md  README.ja.md  README.md  app.d.ts  components.json  eslint.config.ts  init_env  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
src-tauri/: --database-url  .gitignore  Cargo.toml  build.rs  make_test_sqlite.ps1  make_test_sqlite.sh  tauri.conf.json
src-tauri/crates/flequit-core/: Cargo.toml
src-tauri/crates/flequit-core/src/: lib.rs
src-tauri/crates/flequit-infrastructure/: Cargo.toml
src-tauri/crates/flequit-infrastructure-automerge/: Cargo.toml  build.rs
src-tauri/crates/flequit-infrastructure-automerge/src/: core_ports_impls.rs  lib.rs
src-tauri/crates/flequit-infrastructure-automerge/tests/: integration_tests.rs
src-tauri/crates/flequit-infrastructure-sqlite/: Cargo.toml  build.rs
src-tauri/crates/flequit-infrastructure-sqlite/src/: core_ports_impls.rs  lib.rs
src-tauri/crates/flequit-infrastructure-sqlite/tests/: integration_tests.rs
src-tauri/crates/flequit-infrastructure/src/: config.rs  infrastructure_repositories.rs  lib.rs
src-tauri/crates/flequit-model/: Cargo.toml
src-tauri/crates/flequit-model/src/: lib.rs
src-tauri/crates/flequit-repository/: Cargo.toml  build.rs
src-tauri/crates/flequit-repository/src/: lib.rs
src-tauri/crates/flequit-repository/tests/: test_utils.rs
src-tauri/crates/flequit-settings/: Cargo.toml
src-tauri/crates/flequit-settings/src/: errors.rs  lib.rs  manager.rs  paths.rs  validation.rs
src-tauri/crates/flequit-settings/tests/: integration_tests.rs
src-tauri/crates/flequit-storage/: Cargo.toml
src-tauri/crates/flequit-storage/src/: lib.rs
src-tauri/crates/flequit-storage/tests/: integration_tests.rs  test_utils.rs
src-tauri/crates/flequit-testing/: Cargo.toml
src-tauri/crates/flequit-testing/src/: lib.rs  test_paths.rs
src-tauri/crates/flequit-types/: Cargo.toml
src-tauri/examples/: hybrid_migration_example.rs
src-tauri/src/: automerge_manager.rs  lib.rs  lib_new.rs  logger.rs  main.rs  state.rs
src-tauri/src/commands/: account_commands.rs  assignment_commands.rs  auto_save.rs  bulk_commands.rs  document_commands.rs  file_commands.rs  initialization_commands.rs  mod.rs  path_commands.rs  project_commands.rs  project_commands_old.rs  project_member_commands.rs  setting_commands.rs  settings_commands.rs  subtask_assignment_commands.rs  subtask_commands.rs  tag_commands.rs  tagging_commands.rs  task_assignment_commands.rs  task_commands.rs  task_list_commands.rs  user_commands.rs  user_preferences_commands.rs
src-tauri/src/commands/settings_commands/: datetime_format_commands.rs  settings_file_commands.rs  time_label_commands.rs  view_item_commands.rs
src-tauri/src/commands/task_commands/: mod.rs  read.rs  recurrence.rs  write.rs
src-tauri/src/errors/: command_error.rs  mod.rs  repository_error.rs  service_error.rs
src-tauri/src/facades/: account_facades.rs  initialization_facades.rs  mod.rs  project_facades.rs  setting_facades.rs  subtask_facades.rs  tag_facades.rs  task_facades.rs  task_list_facades.rs
src-tauri/src/infrastructure/: automerge_service.rs  mod.rs
src-tauri/src/models/: account.rs  account_models.rs  assignment.rs  command_models.rs  date_condition.rs  datetime.rs  datetime_calendar.rs  datetime_calendar_models.rs  datetime_format.rs  datetime_format_models.rs  due_date_buttons.rs  individual.rs  initialize.rs  initialized_data.rs  member.rs  mod.rs  project.rs  project_models.rs  project_search_request.rs  recurrence.rs  recurrence_adjustment.rs  recurrence_details.rs  recurrence_rule.rs  search.rs  search_request_models.rs  setting.rs  setting_models.rs  setting_response.rs  settings.rs  sub_task_models.rs  subtask.rs  subtask_assignment.rs  subtask_recurrence.rs  subtask_search_request.rs  subtask_tag.rs  tag.rs  tag_search_request.rs  tagging.rs  task.rs  task_assignment.rs  (+13 more)
src-tauri/src/models/command/: account.rs  initialize.rs  mod.rs  project.rs  setting.rs  subtask.rs  tag.rs  task.rs  task_list.rs  user.rs
src-tauri/src/models/sqlite/: account.rs  custom_date_format.rs  mod.rs  project.rs  setting.rs  settings.rs  settings_key_value.rs  subtask.rs  tag.rs  task.rs  task_list.rs  time_label.rs  user.rs  view_item.rs
src-tauri/src/models/user_preferences/: mod.rs  tag_bookmark.rs
src-tauri/src/repositories/: account_repository_trait.rs  base_repository_trait.rs  mod.rs  project_repository_trait.rs  repository_factory.rs  repositry_manager.rs  setting_repository_trait.rs  settings_repository_trait.rs  sub_task_repository_trait.rs  summary_repository_trait.rs  tag_repository_trait.rs  task_list_repository_trait.rs  task_repository_trait.rs  unified_project_repository.rs  user_repository_trait.rs
src-tauri/src/repositories/automerge/: automerge_storage.rs  mod.rs  project_repository.rs  sqlite_storage.rs  subtask_repository.rs  tag_repository.rs  task_repository.rs  user_repository.rs
src-tauri/src/repositories/cloud_automerge/: mod.rs  subtask.rs  (+7 more)
src-tauri/src/services/: account_service.rs  automerge_service.rs  initialization_service.rs  mod.rs  path_service.rs  project_service.rs  repository_service.rs  setting_service.rs  subtask_service.rs  tag_service.rs  task_list_service.rs  task_service.rs  user_service.rs
src-tauri/src/types/: automerge_interface.rs  command_types.rs  datetime_calendar_types.rs  datetime_format_types.rs  id_types.rs  mod.rs  project_types.rs  sub_task_types.rs  tag_types.rs  task_list_types.rs  task_types.rs  user_types.rs
src-tauri/src/utils/: id_utils.rs  mod.rs  time_utils.rs
src-tauri/tests/: automerge_repo_integration_test.rs  config_integration_test.rs  integration_tests.rs  local_automerge_repository_integration_test.rs  test_harness.rs  test_utils.rs
src-tauri/tests/integration/: automerge_repo_test.rs  local_automerge_repository_test.rs  local_sqlite_repository_test.rs  mod.rs  project_document_test.rs
(+2152 files in other folders)
