[package]
name = "flequit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "flequit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flequit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "migration_runner"
path = "src/bin/migration_runner.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
automerge = "0.6.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
log = "0.4"
env_logger = "0.11.8"
automerge_repo = "0.2.2"
async-trait = "0.1.88"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.12"
futures = "0.3.31"
partially = { version = "0.2.1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "time", "chrono"] }
tracing-appender = "0.2.3"

[dev-dependencies]
tempfile = "3.0"
