[package]
name = "flequit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "flequit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flequit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "migration_runner"
path = "crates/flequit-storage/src/bin/migration_runner.rs"

[workspace]
members = [
    "crates/flequit-core",
    "crates/flequit-model",
    "crates/flequit-storage",
    "."
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal crates
flequit-model = { path = "crates/flequit-model" }
flequit-core = { path = "crates/flequit-core" }

# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization (for commands)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"

# Utilities
dirs = "6.0.0"

# Error handling
thiserror = "2.0.12"

# Logging
log = "0.4"
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "time", "chrono"] }
tracing-appender = "0.2.3"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.0"
