[package]
name = "flequit-core"
version = "0.1.0"
edition = "2021"
description = "Core business logic for Flequit task management application"

[lib]
name = "flequit_core"
crate-type = ["rlib"]

[dependencies]
# Storage layer dependency
flequit-storage = { path = "../flequit-storage" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.88"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.12"

# Logging
log = "0.4"
tracing = "0.1.41"

# Partial update support
partially = { version = "0.2.1", features = ["derive"] }