[package]
name = "flequit-core"
version = "0.1.0"
edition = "2021"
description = "Core business logic for Flequit task management application"

[lib]
name = "flequit_core"
crate-type = ["rlib"]

[dependencies]
# Storage layer dependency
flequit-types = { path = "../flequit-types" }
flequit-model = { path = "../flequit-model" }
flequit-repository = { path = "../flequit-repository" }
flequit-infrastructure = { path = "../flequit-infrastructure" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.88"

# Database ORM (for transaction types)
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.12"

# Logging
log = "0.4"
tracing = "0.1.41"
