[package]
name = "flequit-infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
flequit-types = { path = "../flequit-types" }
flequit-model = { path = "../flequit-model" }
flequit-repository = { path = "../flequit-repository" }
flequit-infrastructure-sqlite = { path = "../flequit-infrastructure-sqlite" }
flequit-infrastructure-automerge = { path = "../flequit-infrastructure-automerge" }
async-trait = "0.1"
tracing = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "fs"] }
dirs = "5.0"

[dev-dependencies]
scopeguard = "1.0"
