[package]
name = "flequit-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer for Flequit task management application"

[lib]
name = "flequit_storage"
crate-type = ["rlib"]

[dependencies]
# Database and ORM
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

# Automerge for CRDT functionality
automerge = "0.6.1"
automerge_repo = "0.2.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.88"
futures = "0.3.31"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"

# Error handling
thiserror = "2.0.12"

# Partial update support
partially = { version = "0.2.1", features = ["derive"] }

# Logging
log = "0.4"
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.0"