[package]
name = "flequit-testing"
version = "0.1.0"
edition = "2021"
description = "Common testing utilities for Flequit"

[lib]
name = "flequit_testing"
crate-type = ["rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
