[package]
name = "flequit-types"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["uuid"] }
specta-typescript = "0.0.9"
specta-jsdoc = "0.0.9"

# Error handling
thiserror = "2.0.16"
